; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http1client.c_do_steal_socket.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http1client.c_do_steal_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.st_h2o_http1client_t = type { %struct.TYPE_4__*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* (i32*)* @do_steal_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @do_steal_socket(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.st_h2o_http1client_t*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = bitcast i32* %5 to i8*
  %7 = bitcast i8* %6 to %struct.st_h2o_http1client_t*
  store %struct.st_h2o_http1client_t* %7, %struct.st_h2o_http1client_t** %3, align 8
  %8 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %9 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %4, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %12 = call i32 @h2o_socket_read_stop(%struct.TYPE_4__* %11)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %16 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @h2o_buffer_consume(i32* %14, i64 %17)
  %19 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %20 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %19, i32 0, i32 1
  store i64 0, i64* %20, align 8
  %21 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %22 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %21, i32 0, i32 0
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %22, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  ret %struct.TYPE_4__* %23
}

declare dso_local i32 @h2o_socket_read_stop(%struct.TYPE_4__*) #1

declare dso_local i32 @h2o_buffer_consume(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
